# ncmdump-GUI

./: .gitignore  CMakeLists.txt  GUIExtra.hpp  MergeFileDialog.cpp  MergeFileDialog.h  README.md  ncmdumpGUI_OptionsDialog.cpp  ncmdumpGUI_OptionsDialog.h  ncmdump_GUIApp.cpp  ncmdump_GUIApp.h  ncmdump_GUIMain.cpp  ncmdump_GUIMain.h  resource.rc
include/: ConvertTaskThread.h
locale/zh_CN/: zh_CN.po
ncmdump/: aes.cpp  ncmcrypt.cpp  ncmcrypt.h
src/: ConvertTaskThread.cpp
wxsmith/: MergeFileDialog.wxs  ncmdumpGUI_OptionsDialog.wxs  ncmdump_GUIframe.wxs
